add: index.cssへ使用フォントをインポート

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,10 @@
+@import '@fontsource/nosifer';
+@import '@fontsource/cuprum';
+@import '@fontsource/dotgothic16';
+@import '@fontsource/inter';
+@import '@fontsource/road-rage';
+@import 'fontsource-frijole';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
