--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  src: url('./fonts/road-rage.woff') format('woff');
+  font-family: 'Road Rage';
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  src: url('./fonts/cuprum.woff') format('woff');
+  font-family: 'Cuprum';
+  font-style: normal;
+  font-display: swap;
+}
